--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vee-validate/rules": "^4.9.5",
     "firebase": "^8.10.1",
+    "howler": "^2.2.3",
     "pinia": "^2.0.36",
     "vee-validate": "^4.9.5",
     "vue": "^3.3.2",
