--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vee-validate/rules": "^4.9.5",
     "firebase": "^8.10.1",
     "howler": "^2.2.3",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.36",
     "vee-validate": "^4.9.5",
     "vue": "^3.3.2",
@@ -35,9 +36,11 @@
     "jsdom": "^22.0.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
+    "rollup-plugin-visualizer": "^5.9.2",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.5",
+    "vite-plugin-pwa": "^0.16.4",
     "vitest": "^0.31.0"
   }
 }
